# algorithm

./: .gitignore
tmp/: CMakeLists.txt  Substr.cc  Substr.hh  SubstrTest.cc
